# shine_gpu

./: .gitignore  .memory_node_1234.pid  AGENTS.md  CMakeLists.txt  README.md
rdma-library/: CMakeLists.txt
scripts/: build_offline_index.sh  package_vector_test_lib.sh  run_breakdown_test.sh  start_compute_node.sh  start_memory_node.sh
src/: buffer_allocator.hh  compute_thread.hh  coroutine.hh  main.cc  memory_node.hh  shared_context.hh  worker_pool.hh
src/cache/: cache.hh  cache_entry.hh  kmeans.hh  placement.hh
src/common/: configuration.hh  constants.hh  debug.hh  index_path.hh  statistics.hh  timing.cc  types.hh
src/gpu/: compute_thread_gpu.cc  gpu_awaitable.cc  gpu_awaitable.hh  gpu_buffer_manager.cu  gpu_buffer_manager.hh  gpu_kernel_launcher.cu  gpu_kernel_launcher.hh
src/gpu/kernels/: distance_kernels.cuh
src/http/: service_types.hh  vamana_service_scheduler.hh
src/io/: database.hh  read_data.hh
src/rdma/: vamana_rdma_atomics.hh  vamana_rdma_operations.hh  vamana_rdma_reads.hh  vamana_rdma_writes.hh
src/router/: message_wrapper.hh  query_router.hh
src/service/: breakdown.hh  compute_service.cc  compute_service.hh  rabitq_artifacts.cc  rabitq_artifacts.hh
src/vamana/: scheduler.hh  vamana.hh  vamana_neighborlist.cc  vamana_neighborlist.hh  vamana_node.cc  vamana_node.hh
test/: CMakeLists.txt  README.md
test/config/: local_same_host_5mn.ini  local_single_cn.ini
test/include/: shine_index.h
test/src/: main.cpp  shine_index.cpp
tools/: run_recall_test.sh  shine_breakdown_benchmark.cc  vamana_offline_builder.cc
